Fixing tabindex > 0, contrast ratio, aria-roles for the tags, associate labels with inputs

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #9c9740;
+  background-color: #777431;
   /* background-color: #beb45a; */
   border-radius: 0;
 }
